# oxos

./: .gdbinit  .gitignore  Cargo.toml  Makefile  README.md  flake.nix  rust-toolchain.toml  shell.nix
dispositionspapier/: disposition.tex
docs/: 00_knowledge_base.md  01-qemu-setup.md  02_video_core_hello_world.md  03_resetup_of_compilation.md  04_gpio_pins.md  05_hardware.md  06_scheduler.md
etc/arm_assembly/: hello.s
etc/assembly/: gnu_as_hello_world.s
etc/init_pi3/: .gdbinit  Makefile  boot.s  kernel.c  linker.ld
ext/hello/: Cargo.toml  linker.ld
ext/hello/.cargo/: config
ext/hello/src/: main.rs  uart.rs
ext/hello_world/.cargo/: config
ext/hello_world/src/: linker.ld  main.rs
ext/oxos-syscall/: Cargo.toml
ext/oxos_syscall/: Cargo.toml
ext/oxos_syscall/src/: display.rs  lib.rs
ext/tic-tac-toe/: Cargo.toml  linker.ld
ext/tic-tac-toe/src/: game_logic.rs  init.s  main.rs  panic.rs  player_controls.rs  rendering.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: batch_loader.rs  boot.s  exception.rs  exception.s  framebuffer.rs  gpio.rs  linker.ld  main.rs  panic.rs  uart.rs  utils.rs
kernel/src/interrupt/: el_switch.rs  exception_handler.rs  exception_handler.s  mod.rs  syscall.rs
kernel/src/peripherals/: framebuffer.rs  gpio.rs  mod.rs  uart.rs
kernel/src/process/: batch_loader.rs  mod.rs
kernel/src/utils/: panic.rs
src/: batch_loader.rs  boot.s  framebuffer.rs  gpio.rs  lib.rs  linker.ld  main.rs  program_loader.rs  uart.rs  utils.rs
utils/: gpio.py  progprep.py
