[package]
name = "oxos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build]
rustflags ="-C linker=aarch64-elf-ld -O"
target="aarch64-unknown-linux-gnu"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
